--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 Flask==0.9
+Flask-Script==0.6.2
 Jinja2==2.6
 MySQL-python==1.2.4
 SQLAlchemy==0.8.0b2
 Werkzeug==0.8.3
+argparse==1.2.1
 beautifulsoup4==4.1.3
 blinker==1.2
+distribute==0.7.3
 feedparser==5.1.3
 lxml==3.1beta1
 raven==3.1.17
