--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==0.9
 Flask-Script==0.6.2
 Jinja2==2.6
-MySQL-python==1.2.4
+psycopg2==2.5.1
 SQLAlchemy==0.8.0b2
 Werkzeug==0.8.3
 argparse==1.2.1
