--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,1 @@
-Flask==0.10.1
-Flask-SQLAlchemy==1.0
-Flask-Script==0.6.2
-GeoAlchemy2==0.2.2
-Jinja2==2.6
-SQLAlchemy==0.8.3
-Werkzeug==0.8.3
-argparse==1.2.1
-beautifulsoup4==4.1.3
-blinker==1.2
-distribute==0.7.3
-feedparser==5.1.3
-geopy==0.96.2
-itsdangerous==0.23
-lxml==3.1beta1
-memory-profiler==0.30
-psycopg2==2.5.1
-pytz==2013.7
-raven==3.1.17
-redis==2.7.2
-requests==2.0.0
-wsgiref==0.1.2
+-r requirements/production.txt
